security/pod_secure.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-sleeper
  namespace: default
spec:
# securityContext on pod level
  securityContext:
    runAsUser: 1002
    runAsGroup: 3020
  containers:
  - command:
    - sleep
    - "4800"
    image: ubuntu
    name: ubuntu-sleeper
 #  securityContext on container level
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
